--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
     "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test": "jest"
   },
   "devDependencies": {
+    "jest": "^29.6.2",
     "prettier": "^3.2.5"
   }
 }
