--- a/package.json
+++ b/package.json
@@ -3,10 +3,26 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "start": "node server.js",
+    "dev": "next dev"
   },
   "devDependencies": {
     "jest": "^29.6.2",
     "prettier": "^3.2.5"
+  },
+  "name": "practicing_power_",
+  "description": "-prettier esta *desabilitado* in Codespaces",
+  "version": "1.0.0",
+  "main": "scripts.js",
+  "directories": {
+    "test": "tests"
+  },
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
