--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,7 +1,7 @@
 services:
   databases:
     image: 'postgres:16.2-alpine3.19'
-    environment:
-      POSTGRES_PASSWORD: "suco_de_uva"
+    env_file:
+      - ../.env
     ports:
       - "5432:5432"
