--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -2,6 +2,6 @@ services:
   databases:
     image: 'postgres:16.2-alpine3.19'
     env_file:
-      - ../.env
+      - ../.env.development
     ports:
       - "5432:5432"
